--- a/Views/Shared/Components/MainNav/Default.cshtml
+++ b/Views/Shared/Components/MainNav/Default.cshtml
@@ -1,10 +1,12 @@
 ﻿<!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
+
     <!-- Brand Logo -->
-    <a asp-action="index" asp-controller="home" class="brand-link">
-        <img src="~/img/Catalana.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3">
-        <span class="brand-text font-weight-light">Catalana</span>
+    <a asp-action="index" asp-controller="home" class="brand-link d-flex align-items-center justify-content-center position-relative overflow-hidden" style="height: 100px;">
+        <!-- Imagen como fondo -->
+        <img src="~/img/contable.png" alt="Logo Catalana" class="w-75 h-auto position-relative" style="filter: brightness(0) invert(1);">
     </a>
+
     <!-- Sidebar -->
     <div class="sidebar">
         <!-- Sidebar Menu -->
