--- a/wwwroot/css/pages/repo.admin.css
+++ b/wwwroot/css/pages/repo.admin.css
@@ -38,8 +38,8 @@
 
 .drag-file-container button:hover{
     background-color:#fff;
-    color: #007bff;
-    border: 1px solid #007bff;
+    color: #4b339c;
+    border: 1px solid #4b339c;
 }
 
 .drag-file-container img{
