--- a/Views/Shared/AdminLTE/_Layout.cshtml
+++ b/Views/Shared/AdminLTE/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="~/css/custom-fonts.css"/>
     @await RenderSectionAsync("Styles", required: false)
 </head>
+
+<style>
+    a {
+        color: #221451 !important;
+    }
+</style>
+
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
         @await Component.InvokeAsync("TopNav")
