--- a/Views/Shared/Components/TopNav/Default.cshtml
+++ b/Views/Shared/Components/TopNav/Default.cshtml
@@ -3,6 +3,35 @@
 @using CoreContable.Services
 @inject ISecurityRepository SecurityRepository
 
+<style>
+    select {
+        background-color: white !important; 
+        color: #301D71 !important;
+        border: 1px solid #301D71 !important;
+        padding: 5px;
+        border-radius: 5px !important;
+        appearance: none !important; */
+        outline: none !important;
+        cursor: pointer;
+    }
+
+        select:hover {
+            background-color: #4B339C !important; 
+            color: white !important; 
+        }
+
+    option:hover {
+        background-color: #4B339C !important;
+        color: white !important;
+    }
+
+    option {
+        background-color: white !important;
+        color: #301D71 !important;
+    }
+</style>
+
+
 <!-- Navbar -->
 <nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
