--- a/wwwroot/plugins/select2-3/css/select2-bootstrap.css
+++ b/wwwroot/plugins/select2-3/css/select2-bootstrap.css
@@ -230,7 +230,7 @@
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #dbc59e;
 }
 .has-warning.select2-drop-active {
-  border-color: #a47e3c;
+    border-color: #301D71;
 }
 .has-warning.select2-drop-active.select2-drop.select2-drop-above {
   border-top-color: #a47e3c;
@@ -242,16 +242,16 @@
 }
 .has-error .select2-container-active .select2-choice,
 .has-error .select2-container-multi.select2-container-active .select2-choices {
-  border-color: #953b39;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
+    border-color: #301D71;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
 }
 .has-error.select2-drop-active {
-  border-color: #953b39;
+    border-color: #301D71;
 }
-.has-error.select2-drop-active.select2-drop.select2-drop-above {
-  border-top-color: #953b39;
-}
+    .has-error.select2-drop-active.select2-drop.select2-drop-above {
+        border-top-color: #301D71;
+    }
 
 .has-success .select2-choice,
 .has-success .select2-choices {
@@ -259,16 +259,16 @@
 }
 .has-success .select2-container-active .select2-choice,
 .has-success .select2-container-multi.select2-container-active .select2-choices {
-  border-color: #356635;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
+    border-color: #301D71;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
 }
 .has-success.select2-drop-active {
-  border-color: #356635;
+    border-color: #301D71;
 }
-.has-success.select2-drop-active.select2-drop.select2-drop-above {
-  border-top-color: #356635;
-}
+    .has-success.select2-drop-active.select2-drop.select2-drop-above {
+        border-top-color: #301D71;
+    }
 
 /**
  * Make Select2's active-styles - applied to .select2-container when the widget receives focus -
@@ -276,21 +276,21 @@
  */
 .select2-container-active .select2-choice,
 .select2-container-multi.select2-container-active .select2-choices {
-  border-color: #66afe9;
-  outline: none;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    border-color: #301D71;
+    outline: none;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+    transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
 
 .select2-drop-active {
-  border-color: #66afe9;
+    border-color: #301D71;
 }
 
 .select2-drop-auto-width,
 .select2-drop.select2-drop-above.select2-drop-active {
-  border-top-color: #66afe9;
+    border-top-color: #301D71;
 }
 
 /**
@@ -336,7 +336,7 @@
  */
 .select2-results .select2-highlighted {
   color: white;
-  background-color: #428bca;
+  background-color: #4B339C;
 }
 
 /**
