--- a/Views/Shared/Components/MainNav/Default.cshtml
+++ b/Views/Shared/Components/MainNav/Default.cshtml
@@ -55,7 +55,7 @@
 
     <!-- Brand Logo -->
     <a asp-action="index" asp-controller="home" class="brand-link d-flex align-items-center justify-content-center position-relative overflow-hidden" style="height: 100px;">
-        <img id="logo-img" src="~/img/contable.png" alt="Logo Catalana" class="w-75 h-auto position-relative" style="filter: brightness(0) invert(1);">
+        <img id="logo-img" src="~/img/contable.png" alt="Logo CONTABLE" class="w-75 h-auto position-relative" style="filter: brightness(0) invert(1);">
     </a>
 
     <script>
