--- a/wwwroot/css/alt/adminlte.light.css
+++ b/wwwroot/css/alt/adminlte.light.css
@@ -2595,14 +2595,14 @@ fieldset:disabled a.btn {
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #0069d9;
-  border-color: #0062cc;
+  background-color: #301D71;
+  border-color: #3b1ba7;
 }
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #0069d9;
-  border-color: #0062cc;
+  background-color: #301D71;
+  border-color: #3b1ba7;
   box-shadow: 0 0 0 0 rgba(38, 143, 255, 0.5);
 }
 
@@ -2615,7 +2615,7 @@ fieldset:disabled a.btn {
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #0062cc;
+  background-color: #3b1ba7;
   border-color: #005cbf;
 }
 
@@ -5235,7 +5235,7 @@ a.badge:hover, a.badge:focus {
 
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #0062cc;
+  background-color: #3b1ba7;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
@@ -6834,7 +6834,7 @@ a.close.disabled, a.disabled.mailbox-attachment-close {
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #0062cc !important;
+  background-color: #3b1ba7 !important;
 }
 
 .bg-secondary {
@@ -33040,12 +33040,12 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-primary.btn:hover {
-  border-color: #0062cc;
+  border-color: #3b1ba7;
   color: #ececec;
 }
 
 .bg-primary.btn:not(:disabled):not(.disabled):active, .bg-primary.btn:not(:disabled):not(.disabled).active, .bg-primary.btn:active, .bg-primary.btn.active {
-  background-color: #0062cc !important;
+  background-color: #3b1ba7 !important;
   border-color: #005cbf;
   color: #fff;
 }
@@ -33320,12 +33320,12 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-blue.btn:hover {
-  border-color: #0062cc;
+  border-color: #3b1ba7;
   color: #ececec;
 }
 
 .bg-blue.btn:not(:disabled):not(.disabled):active, .bg-blue.btn:not(:disabled):not(.disabled).active, .bg-blue.btn:active, .bg-blue.btn.active {
-  background-color: #0062cc !important;
+  background-color: #3b1ba7 !important;
   border-color: #005cbf;
   color: #fff;
 }
@@ -33583,7 +33583,7 @@ blockquote.quote-gray-dark h6 {
   }
   .table td.bg-primary.btn:hover,
   .table th.bg-primary.btn:hover {
-    border-color: #0062cc;
+    border-color: #3b1ba7;
     color: #ececec;
   }
   .table td.bg-primary.btn:not(:disabled):not(.disabled):active, .table td.bg-primary.btn:not(:disabled):not(.disabled).active, .table td.bg-primary.btn:active, .table td.bg-primary.btn.active,
@@ -33591,7 +33591,7 @@ blockquote.quote-gray-dark h6 {
   .table th.bg-primary.btn:not(:disabled):not(.disabled).active,
   .table th.bg-primary.btn:active,
   .table th.bg-primary.btn.active {
-    background-color: #0062cc !important;
+    background-color: #3b1ba7 !important;
     border-color: #005cbf;
     color: #fff;
   }
@@ -33919,7 +33919,7 @@ blockquote.quote-gray-dark h6 {
   }
   .table td.bg-blue.btn:hover,
   .table th.bg-blue.btn:hover {
-    border-color: #0062cc;
+    border-color: #3b1ba7;
     color: #ececec;
   }
   .table td.bg-blue.btn:not(:disabled):not(.disabled):active, .table td.bg-blue.btn:not(:disabled):not(.disabled).active, .table td.bg-blue.btn:active, .table td.bg-blue.btn.active,
@@ -33927,7 +33927,7 @@ blockquote.quote-gray-dark h6 {
   .table th.bg-blue.btn:not(:disabled):not(.disabled).active,
   .table th.bg-blue.btn:active,
   .table th.bg-blue.btn.active {
-    background-color: #0062cc !important;
+    background-color: #3b1ba7 !important;
     border-color: #005cbf;
     color: #fff;
   }
@@ -34252,13 +34252,13 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-gradient-primary.btn:hover {
-  background: #4b339c linear-gradient(180deg, #267fde, #0069d9) repeat-x !important;
-  border-color: #0062cc;
+  background: #4b339c linear-gradient(180deg, #267fde, #301D71) repeat-x !important;
+  border-color: #3b1ba7;
   color: #ececec;
 }
 
 .bg-gradient-primary.btn:not(:disabled):not(.disabled):active, .bg-gradient-primary.btn:not(:disabled):not(.disabled).active, .bg-gradient-primary.btn:active, .bg-gradient-primary.btn.active {
-  background: #4b339c linear-gradient(180deg, #267ad4, #0062cc) repeat-x !important;
+  background: #4b339c linear-gradient(180deg, #267ad4, #3b1ba7) repeat-x !important;
   border-color: #005cbf;
   color: #fff;
 }
@@ -34644,13 +34644,13 @@ blockquote.quote-gray-dark h6 {
 }
 
 .bg-gradient-blue.btn:hover {
-  background: #4b339c linear-gradient(180deg, #267fde, #0069d9) repeat-x !important;
-  border-color: #0062cc;
+  background: #4b339c linear-gradient(180deg, #267fde, #301D71) repeat-x !important;
+  border-color: #3b1ba7;
   color: #ececec;
 }
 
 .bg-gradient-blue.btn:not(:disabled):not(.disabled):active, .bg-gradient-blue.btn:not(:disabled):not(.disabled).active, .bg-gradient-blue.btn:active, .bg-gradient-blue.btn.active {
-  background: #4b339c linear-gradient(180deg, #267ad4, #0062cc) repeat-x !important;
+  background: #4b339c linear-gradient(180deg, #267ad4, #3b1ba7) repeat-x !important;
   border-color: #005cbf;
   color: #fff;
 }
