--- a/Views/Reports/EstadosResultados.cshtml
+++ b/Views/Reports/EstadosResultados.cshtml
@@ -1,4 +1,4 @@
-﻿@using System;
+﻿﻿@using System;
 @using System.Collections.Generic;
 @using System.Linq;
 @using CoreContable.Models.Report;
@@ -33,7 +33,7 @@
 }
 
 <!doctype html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -151,15 +151,18 @@
 
                     Dictionary<string, string> titulos = new Dictionary<string, string>
                 {
-                { "51", "INGRESOS POR VENTAS" },
-                { "42", "COSTO DE VENTA" },
-                { "44", "GASTOS DE OPERACIÓN" },
-                { "52", "INGRESOS POR OTRAS VENTAS" },
-                { "45", "GASTOS FINANCIEROS" },
-                { "46", "OTROS GASTOS" },
-                };
+                    { "51", "INGRESOS POR VENTAS" },
+                    { "42", "COSTO DE VENTA" },
+                    { "44", "GASTOS DE OPERACIÓN" },
+                    { "5201", "INGRESOS POR OTRAS VENTAS" },
+                    { "5206", "OTROS INGRESOS" },
+                    { "43", "COSTO DE VENTA DE NO OPERACIÓN" },
+                    { "5204", "INGRESOS FINANCIEROS" },
+                    { "4501", "GASTOS FINANCIEROS" },
+                    { "4502", "OTROS GASTOS" },
+                    };
 
-                    foreach (var detalle in Model.Detalles.Where (d => d.Cta_CONTABLE.Contains ("51")).ToList ( ))
+                    foreach (var detalle in Model.Detalles.Where (d => d.Cta_CONTABLE.StartsWith ("5")).ToList ( ))
                     {
                         totalIngresosVentas += detalle.Saldo;
                     }
@@ -176,15 +179,21 @@
                     <tr>
                         <td colspan="7"><br /></td>
                     </tr>
-                    if (titulo.Key.Equals ("52"))
+                    if (titulo.Key.Equals ("5201"))
                     {
                         <tr>
                             <td colspan="7"><p>INGRESOS, COSTOS Y GASTOS DE NO OPERACIÓN</p></td>
                         </tr>
                     }
-                    foreach (var detalle2 in Model.Detalles.Where (d => d.Cta_CONTABLE.Substring (0, 2) == titulo.Key).ToList ( ))
+                    if (titulo.Key.Equals ("4501"))
                     {
-                        total += detalle2.Saldo;
+                        <tr>
+                            <td colspan="7"><p>GASTOS NO OPERACIONALES</p></td>
+                        </tr>
+                    }
+                    foreach (var detalle in Model.Detalles.Where (d => d.Cta_CONTABLE.StartsWith(titulo.Key)).ToList ( ))
+                    {
+                        total += detalle.Saldo;
                     }
                     <tr>
                         <td colspan="7"><p>@(titulo.Key.StartsWith ("4") ? "MENOS:" : "MÁS:")</p></td>
@@ -192,21 +201,21 @@
                     <tr>
                         <td><p>@titulo.Value</p></td>
                         <td></td>
-                        <td class="text-right bold"><p class="money">@MoneyUtils.GetDefaultFormatAsString(Decimal.ToDouble (@total))</p></td>
+                        <td class="text-right bold"><p class="money">$@MoneyUtils.GetDefaultFormatAsString(Decimal.ToDouble (@total))</p></td>
                         <td class="text-center bold"><p>@MoneyUtils.FormatStringFromDecimalTwoDecimals(total / totalIngresosVentas * 100)%</p></td>
                         <td></td>
-                        <td class="text-right bold"><p class="money">@MoneyUtils.GetDefaultFormatAsString(Decimal.ToDouble (@total))</p></td>
+                        <td class="text-right bold"><p class="money">$@MoneyUtils.GetDefaultFormatAsString(Decimal.ToDouble (@total))</p></td>
                         <td class="text-center bold"><p>@MoneyUtils.FormatStringFromDecimalTwoDecimals(total / totalIngresosVentas * 100)</p></td>
                     </tr>
 
-                    foreach (var detalle in Model.Detalles.Where (d => d.Cta_CONTABLE.Substring (0, 2) == titulo.Key).ToList ( ))
+                    foreach (var detalle in Model.Detalles.Where (d => d.Cta_CONTABLE.StartsWith (titulo.Key)).ToList ( ))
                     {
                         <tr>
                             <td><p>@detalle.Descrip_Esp</p></td>
-                            <td class="text-right"><p class="money">@MoneyUtils.GetDefaultFormatAsString(Decimal.ToDouble (detalle.Saldo))</p></td>
+                            <td class="text-right"><p class="money">$@MoneyUtils.GetDefaultFormatAsString(Decimal.ToDouble (detalle.Saldo))</p></td>
                             <td></td>
                             <td></td>
-                            <td class="text-right"><p class="money">@MoneyUtils.GetDefaultFormatAsString(Decimal.ToDouble (detalle.Saldo))</p></td>
+                            <td class="text-right"><p class="money">$@MoneyUtils.GetDefaultFormatAsString(Decimal.ToDouble (detalle.Saldo))</p></td>
                             <td></td>
                             <td></td>
                         </tr>
@@ -261,9 +270,7 @@
             <tr>
                 <td colspan="7"><br /></td>
             </tr>
-            <tr>
-                <td colspan="7"><br /></td>
-            </tr>
+
             <tr>
                 <td colspan="2">RESULTADO DEL EJERCICIO</td>
                 <td class=" bold"><p class="money">@MoneyUtils.GetDefaultFormatAsString(Decimal.ToDouble(resultadoIntegralTotal))</p></td>
